tests/macro-tests/tests/expand/pass/first.rs
#[macro_use]
extern crate macro_tests;

pub fn main() {
    test_vec![];
}
