tests/macro-tests/tests/expand/fail/invalid.expanded.rs
#[macro_use]
extern crate macro_tests;
pub fn main() {
    (/*ERROR*/);
}
